--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -1,68 +1,121 @@
-<%= form_with(model: site) do |form| %>
-  <%= render "shared/error_messages", resource: form.object %>
+<div data-controller="form">
 
-  <div class="form-group">
-    <%= form.label :name %>
-    <%= form.text_field :name, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :contact_name %>
-    <%= form.text_field :contact_name, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :email %>
-    <%= form.text_field :email, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :address %>
-    <%= form.text_field :address, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :city %>
-    <%= form.text_field :city, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :state %>
-    <%= form.text_field :state, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :zip_code %>
-    <%= form.text_field :zip_code, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :active %>
-    <%= form.check_box :active, class: "form-checkbox" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :backport_id %>
-    <%= form.text_field :backport_id, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :notes %>
-    <%= form.text_area :notes, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :contact_phone %>
-    <%= form.text_field :contact_phone, class: "form-control" %>
-  </div>
-
-  <div>
-    <%= form.button button_text(form.send(:submit_default_value)), class: "btn btn-primary" %>
-
-    <% if form.object.new_record? %>
-      <%= link_to t("cancel"), sites_path, class: "btn btn-white" %>
+  <%= form_with(model: site) do |form| %>
+    <%= render "shared/error_messages", resource: form.object %>
+    <% if @site.new_record? %>
+      <div class="form-group">
+        <%= form.label :customer_id, "Agency Customer*" %>
+        <%= form.select :customer_id, options_from_collection_for_select(@customers, :id, :name, @customer_id), {prompt: "Please select A Customer"}, {class: 'form-select' }  %>
+      </div>
     <% else %>
-      <%= link_to t("cancel"), site_path(@site), class: "btn btn-white" %>
+
+      <template data-form-target="template">
+        <tr>
+          <%= form.fields_for :departments, Department.new do |new_dept| %>
+            <td class="text-sm"><%= new_dept.text_field :name %></td>
+            <td class="text-sm"><%= new_dept.text_field :location %></td>
+            <td class="text-sm"><%= new_dept.text_field :accounting_unit_code %></td>
+          <% end %>
+        </tr>
+      </template>
+
+      <template data-form-target="templateHeader">
+        <tr id="headerRow">
+          <th class="text-uppercase text-sm font-weight-bolder opacity-7">Department Name</th>
+          <th class="text-uppercase text-sm font-weight-bolder opacity-7">Location</th>
+          <th class="text-uppercase text-start text-sm font-weight-bolder opacity-7">Accounting Unit Code</th>
+       </tr>
+      </template>
+
+      <div class="form-group">Customer: <%= @site.customer&.name %></div>
     <% end %>
-  </div>
-<% end %>
+
+    <div class="form-group">
+      <%= form.label :name %>
+      <%= form.text_field :name, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :contact_name %>
+      <%= form.text_field :contact_name, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :email %>
+      <%= form.text_field :email, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :address %>
+      <%= form.text_field :address, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :city %>
+      <%= form.text_field :city, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :state %>
+      <%= form.text_field :state, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :zip_code %>
+      <%= form.text_field :zip_code, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :active %>
+      <%= form.check_box :active, class: "form-checkbox" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :contact_phone %>
+      <%= form.text_field :contact_phone, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :notes %>
+      <%= form.text_area :notes, class: "form-control" %>
+    </div>
+
+    <% unless @site.new_record? %>
+      <h4>Departments</h4>
+      <div class="">
+        <%= button_tag '+ Add Department'.html_safe, type:'button', data: {action: 'click->form#addFields'}, class: "btn"  %>
+      </div>
+
+      <table class='table-auto' style="width: 50%">
+        <thead data-form-target="addHeader">
+          <tr id="headerRow">
+            <th class="">Department Name</th>
+            <th class="">Location</th>
+            <th class="">Accounting Unit Code</th>
+          </tr>
+        </thead>
+        <tbody data-form-target="addDst">
+          <%= form.fields_for :departments do |dept_form| %>
+            <tr>
+              <td class=""><%= dept_form.text_field :name %></td>
+              <td class=""><%= dept_form.text_field :location %></td>
+              <td class=""><%= dept_form.text_field :accounting_unit_code %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <br>
+    <% end %>
+
+    <div>
+      <%= form.button button_text(form.send(:submit_default_value)), class: "btn btn-primary" %>
+
+      <% if form.object.new_record? %>
+        <%= link_to t("cancel"), sites_path, class: "btn btn-white" %>
+      <% else %>
+        <%= link_to t("cancel"), site_path(@site), class: "btn btn-white" %>
+      <% end %>
+    </div>
+  <% end %>
+
+</div>
