--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,67 +1,73 @@
 <%= content_for :title, "Customers" %>
+<%= turbo_stream_from :customers %>
 
-<div>
-  <%= render partial: "shared/sidenav" %>
-  <div class="flex flex-1 flex-col md:pl-64">
-    <main class="flex-1">
-      <div class="py-6">
-        <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-8">
-          <div class="px-4 sm:px-6 lg:px-8">
-            <div class="sm:flex sm:items-center">
-              <div class="sm:flex-auto">
-                <h1 class="text-xl font-semibold text-gray-900">Customers</h1>
-                <div class="text-sm font-medium mt-2 text-gray-700">
-                  <span class="text-tokanisecondary-500">Sort by:</span>
-                  <%= sortable @customers, :name, "Name", class: "text-gray-700 mr-1" %>
-                </div>
-                
-              </div>
-              <!-- <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
-                <button type="button" class="inline-flex items-center justify-center rounded-md border border-transparent bg-tokanisecondary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2 sm:w-auto">Add Appointment</button>
-              </div> -->
-            </div>
-            <div class="-mx-4 mt-8 overflow-hidden shadow ring-1 ring-black ring-opacity-5 sm:-mx-6 md:mx-0 md:rounded-lg">
-              <table class="min-w-full divide-y divide-gray-300">
-                <thead class="bg-gray-50">
-                  <tr>
-                    <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6">Name</th>
-                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Email</th>
-                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Contact Name</th>
-                    <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
-                      <span class="sr-only">Edit</span>
-                    </th>
-                  </tr>
-                </thead>
-                <tbody class="divide-y divide-gray-200 bg-white">
-                <% @customers.each do |customer| %>
-                  <tr>
-                    <td class="w-full max-w-0 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:w-auto sm:max-w-none sm:pl-6">
-                        <%= customer.name %>
-                      <dl class="font-normal lg:hidden">
-                        <dt class="sr-only">Email</dt>
-                        <dd class="mt-1 truncate text-gray-700"><%= customer.owner.email %></dd>
-                        <dt class="sr-only">Contact Name</dt>
-                        <dd class="mt-1 truncate text-gray-500"><%= customer.owner.name %></dd>
-                      </dl>
-                    </td>
-                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= customer.owner.email %></td>
-                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= customer.owner.name %></td>
-                    <td class="py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                      <a href="#" class="text-tokanisecondary-600 hover:text-tokanisecondary-900">Edit<span class="sr-only">, <%= customer.id %></span></a>
-                    </td>
-                  </tr>
-                <% end %>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
+<div class="container px-4 mx-auto my-8">
+  <div class="flex items-center justify-between mb-4">
+    <div>
+      <h1 class="h3">Customers</h1>
+
+<!--       <div class="text-sm font-medium">
+        <span class="text-gray-500">Sort by:</span>
+        <%= sortable @customers, :name, "Name", class: "text-gray-700 mr-1" %>
+        <%= sortable @customers, :contact_name, "Contact name", class: "text-gray-700 mr-1" %>
+        <%= sortable @customers, :email, "Email", class: "text-gray-700 mr-1" %>
+        <%= sortable @customers, :address, "Address", class: "text-gray-700 mr-1" %>
+        <%= sortable @customers, :city, "City", class: "text-gray-700 mr-1" %>
+        <%= sortable @customers, :state, "State", class: "text-gray-700 mr-1" %>
+        <%= sortable @customers, :zip, "Zip", class: "text-gray-700 mr-1" %>
+        <%= sortable @customers, :is_active, "Is active", class: "text-gray-700 mr-1" %>
+        <%= sortable @customers, :notes, "Notes", class: "text-gray-700 mr-1" %>
+        <%= sortable @customers, :fax, "Fax", class: "text-gray-700 mr-1" %>
+        <%= sortable @customers, :phone, "Phone", class: "text-gray-700 mr-1" %>
       </div>
-      <% if @pagy.pages > 1 %>
+ -->
+    </div>
+
+    <%= link_to t("shared.scaffold.new.title", model: "Customer"), new_customer_path, class: "btn btn-white" %>
+  </div>
+
+  <%= tag.div id: ("customers" if first_page?), class: "bg-white rounded-md shadow p-6 space-y-8" do %>
+    <%#= render partial: "customers/index", collection: @customers, as: :customer, cached: true %>
+
+    <div class="hidden only:flex flex-col items-center justify-between lg:flex-row">
+      <%= image_tag "empty.svg", class: "mb-4 lg:w-1/2" %>
+      <div class="flex-1 text-center">
+        <p class="mb-4 h3">Create your first Customer</p>
+        <%= link_to t("shared.scaffold.new.title", model: "Customer"), new_customer_path, class: "btn btn-primary" %>
+      </div>
+    </div>
+
+    <div class="-mx-4 mt-8 overflow-hidden shadow ring-1 ring-black ring-opacity-5 sm:-mx-6 md:mx-0 md:rounded-lg">
+      <table class="min-w-full divide-y divide-gray-300">
+        <thead class="bg-gray-50">
+          <tr>
+            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @customers, :name, "Name" %></th>
+            <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Contact Name</th>
+            <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Contact Phone</th>
+            <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Email</th>
+            <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Active</th>
+          </tr>
+        </thead>
+        <tbody class="divide-y divide-gray-200 bg-white">
+        <% @customers.each do |customer| %>
+          <tr>
+            <td class="w-full max-w-0 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:w-auto sm:max-w-none sm:pl-6">
+              <%= link_to customer.name, customer_path(customer) %>
+            </td>
+            <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= customer.contact_name %></td>
+            <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= customer.phone %></td>
+            <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= customer.email %></td>
+            <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= yes_no(customer.is_active) %></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  <% end %>
+
+  <% if @pagy.pages > 1 %>
     <div class="my-6 text-center">
       <%== pagy_nav(@pagy) %>
     </div>
   <% end %>
-    </main>
-  </div>
 </div>
