--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,17 +1,15 @@
-<%= content_for :title, "Customers ##{@customer.id}" %>
-<%= turbo_stream_from @customer %>
+<%= content_for :title, t("shared.scaffold.new.title", model: "Customer") %>
 
 <div class="container px-4 mx-auto my-8">
   <div class="flex items-center justify-between mb-4">
     <h1 class="h3">
       <%= link_to "Customers", customers_path, class: "text-black" %>
       <span class="text-gray-400 font-light mx-2">\</span>
-      <%= @customer.name %>
+      <%= t("shared.scaffold.new.title", model: "Customer") %>
     </h1>
-    <%= link_to t("edit"), edit_customer_path(@customer), class: "btn btn-white" %>
   </div>
 
   <div class="p-8 bg-white rounded shadow">
-    <%= render partial: 'customer', locals: { customer: @customer } %>
+    <%= render "form", customer: @customer %>
   </div>
 </div>
