--- a/app/views/account/passwords/edit.html.erb
+++ b/app/views/account/passwords/edit.html.erb
@@ -9,27 +9,46 @@
       <%= form_with(model: current_user, url: account_password_path, local: true, html: { method: :put }, class: "max-w-lg") do |f| %>
         <%= render "shared/error_messages", resource: current_user %>
 
-        <div class="form-group">
-          <%= f.label :current_password %>
-          <%= f.password_field :current_password, autocomplete: "current-password", placeholder: "Current password", class: "form-control" %>
+        <div class="form-group" data-controller="password-visibility">
+          <%= f.label :current_password, class: "block text-sm font-medium text-gray-700" %>
+          <div class="relative mt-1 rounded-md shadow-sm">
+          <%= f.password_field :current_password, data: { password_visibility_target: "input"}, autocomplete: "current-password", placeholder: true, class: "block w-full rounded-md border-gray-300 pr-10 focus:border-tokanisecondary-500 focus:ring-tokanisecondary-500 sm:text-sm" %>
+            <button type="button" data-action="password-visibility#toggle" class="text-gray-500 absolute inset-y-0 right-0 flex items-center pr-3">
+              <span data-password-visibility-target="icon"><i class="fa-regular fa-eye"></i></span>
+              <span data-password-visibility-target="icon" class="hidden"><i class="fa-regular fa-eye-slash"></i></span>
+            </button> 
+          </div>
           <p class="text-sm text-gray-600 mt-3">We need your current password to confirm your changes</p>
         </div>
-
-        <div class="form-group">
-          <%= f.label :password, "New password" %>
-          <%= f.password_field :password, autocomplete: "new-password", placeholder: "New password", class: "form-control" %>
+       
+        <div class="form-group" data-controller="password-visibility">
+          <%= f.label :password, "New password", class: "block text-sm font-medium text-gray-700" %>
+          <div class="relative mt-1 rounded-md shadow-sm">
+          <%= f.password_field :current_password, data: { password_visibility_target: "input"}, autocomplete: "current-password", placeholder: "New Password", class: "block w-full rounded-md border-gray-300 pr-10 focus:border-tokanisecondary-500 focus:ring-tokanisecondary-500 sm:text-sm" %>
+            <button type="button" data-action="password-visibility#toggle" class="text-gray-500 absolute inset-y-0 right-0 flex items-center pr-3">
+              <span data-password-visibility-target="icon"><i class="fa-regular fa-eye"></i></span>
+              <span data-password-visibility-target="icon" class="hidden"><i class="fa-regular fa-eye-slash"></i></span>
+            </button> 
+          </div>
           <% if @minimum_password_length %>
             <p class="text-sm text-gray-600 mt-3"><%= @minimum_password_length %> characters minimum</p>
           <% end %>
         </div>
 
-        <div class="form-group">
-          <%= f.label :password_confirmation, "Confirm new password" %>
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirm new password", class: "form-control" %>
+        <div class="form-group" data-controller="password-visibility">
+          <%= f.label :password_confirmation, "Confirm new password", class: "block text-sm font-medium text-gray-700" %>
+          <div class="relative mt-1 rounded-md shadow-sm">
+          <%= f.password_field :password_confirmation, data: { password_visibility_target: "input"}, autocomplete: "new-password", placeholder: "Confirm new password", class: "block w-full rounded-md border-gray-300 pr-10 focus:border-tokanisecondary-500 focus:ring-tokanisecondary-500 sm:text-sm" %>
+            <button type="button" data-action="password-visibility#toggle" class="text-gray-500 absolute inset-y-0 right-0 flex items-center pr-3">
+              <span data-password-visibility-target="icon"><i class="fa-regular fa-eye"></i></span>
+              <span data-password-visibility-target="icon" class="hidden"><i class="fa-regular fa-eye-slash"></i></span>
+            </button> 
+          </div>
         </div>
 
+
         <div class="form-group">
-          <%= f.submit t(".update"), class: "btn btn-primary" %>
+          <%= f.submit t(".update"), class: "btn btn-tokani_purple" %>
         </div>
       <% end %>
     </div>
