--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -5,21 +5,35 @@
     <%= render "shared/error_messages", resource: resource %>
     <%= f.hidden_field :reset_password_token %>
 
-    <div class="form-group">
-      <%= f.label :password, t('.new_password') %>
-      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control", placeholder: "password" %>
+
+    <div class="form-group" data-controller="password-visibility">
+      <%= f.label :password, t('.new_password'), class: "block text-sm font-medium text-gray-700" %>
+      <div class="relative mt-1 rounded-md shadow-sm">
+      <%= f.password_field :password, data: { password_visibility_target: "input"}, autocomplete: "new-password", placeholder: "password", class: "block w-full rounded-md border-gray-300 pr-10 focus:border-tokanisecondary-500 focus:ring-tokanisecondary-500 sm:text-sm" %>
+        <button type="button" data-action="password-visibility#toggle" class="text-gray-500 absolute inset-y-0 right-0 flex items-center pr-3">
+          <span data-password-visibility-target="icon"><i class="fa-regular fa-eye"></i></span>
+          <span data-password-visibility-target="icon" class="hidden"><i class="fa-regular fa-eye-slash"></i></span>
+        </button> 
+      </div>
       <% if @minimum_password_length %>
         <p class="mt-3 text-sm text-gray-600">(<%= @minimum_password_length %> characters minimum)</p>
       <% end %>
     </div>
 
-    <div class="form-group">
-      <%= f.label :password_confirmation, t('.confirm_new_password') %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder: "password" %>
+    <div class="form-group" data-controller="password-visibility">
+      <%= f.label :password_confirmation, t('.confirm_new_password'), class: "block text-sm font-medium text-gray-700" %>
+      <div class="relative mt-1 rounded-md shadow-sm">
+      <%= f.password_field :password_confirmation, data: { password_visibility_target: "input"}, autocomplete: "new-password", placeholder: true, class: "block w-full rounded-md border-gray-300 pr-10 focus:border-tokanisecondary-500 focus:ring-tokanisecondary-500 sm:text-sm" %>
+        <button type="button" data-action="password-visibility#toggle" class="text-gray-500 absolute inset-y-0 right-0 flex items-center pr-3">
+          <span data-password-visibility-target="icon"><i class="fa-regular fa-eye"></i></span>
+          <span data-password-visibility-target="icon" class="hidden"><i class="fa-regular fa-eye-slash"></i></span>
+        </button> 
+      </div>
     </div>
 
+
     <div class="form-group">
-      <%= f.submit t('.change_my_password'), class: "btn btn-primary" %>
+      <%= f.submit t('.change_my_password'), class: "btn btn-tokani_purple" %>
     </div>
   <% end %>
 
