--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,13 +34,20 @@
       <%= f.email_field :email, autocomplete: "email", placeholder: true, class: "form-control" %>
     </div>
 
-    <div class="form-group">
-      <%= f.label :password %>
-      <%= f.password_field :password, autocomplete: "new-password", placeholder: true, class: "form-control" %>
+    <div class="form-group" data-controller="password-visibility">
+      <%= f.label :password, class: "block text-sm font-medium text-gray-700" %>
+      <div class="relative mt-1 rounded-md shadow-sm">
+      <%= f.password_field :password, data: { password_visibility_target: "input"}, autocomplete: "new-password", placeholder: true, class: "block w-full rounded-md border-gray-300 pr-10 focus:border-tokanisecondary-500 focus:ring-tokanisecondary-500 sm:text-sm" %>
+        <button type="button" data-action="password-visibility#toggle" class="text-gray-500 absolute inset-y-0 right-0 flex items-center pr-3">
+          <span data-password-visibility-target="icon"><i class="fa-regular fa-eye"></i></span>
+          <span data-password-visibility-target="icon" class="hidden"><i class="fa-regular fa-eye-slash"></i></span>
+        </button> 
+      </div>
       <% if @minimum_password_length %>
         <p class="mt-3 text-sm text-gray-600"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></p>
       <% end %>
     </div>
+
 
     <div class="form-group">
       <%= f.label :time_zone %>
