--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -5,27 +5,27 @@
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Contact name</p>
-    <%= customer.contact_name %>
+    <%= customer.customer_detail.contact_name %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Email</p>
-    <%= customer.email %>
+    <%= customer.customer_detail.email %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Address</p>
-    <%= customer.address %>
+    <%= customer.address.line1 %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">City</p>
-    <%= customer.city %>
+    <%= customer.address.city %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">State</p>
-    <%= customer.state %>
+    <%= customer.address.state %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Zip</p>
-    <%= customer.zip %>
+    <%= customer.address.postal_code %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Is active?</p>
@@ -33,26 +33,26 @@
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Notes</p>
-    <%= customer.notes %>
+    <%= customer.customer_detail.notes %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Fax</p>
-    <%= customer.fax %>
+    <%= customer.customer_detail.fax %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Phone</p>
-    <%= customer.phone %>
+    <%= customer.customer_detail.phone %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Appointments in person?</p>
-    <%= yes_no(customer.appointments_in_person) %>
+    <%= yes_no(customer.customer_detail.appointments_in_person) %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Appointments video?</p>
-    <%= yes_no(customer.appointments_video) %>
+    <%= yes_no(customer.customer_detail.appointments_video) %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Appointments phone?</p>
-    <%= yes_no(customer.appointments_phone) %>
+    <%= yes_no(customer.customer_detail.appointments_phone) %>
   </div>
 </div>
