some tweaks and updating seed data

--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -13,19 +13,19 @@
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Address</p>
-    <%= customer.address.line1 %>
+    <%= customer.physical_address.line1 %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">City</p>
-    <%= customer.address.city %>
+    <%= customer.physical_address.city %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">State</p>
-    <%= customer.address.state %>
+    <%= customer.physical_address.state %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Zip</p>
-    <%= customer.address.postal_code %>
+    <%= customer.physical_address.postal_code %>
   </div>
   <div class="mb-4">
     <p class="text-sm font-medium text-gray-500">Is active?</p>
