--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -2,6 +2,11 @@
   <%= render "shared/error_messages", resource: form.object %>
 
   <div class="form-group">
+    <%= form.label :customer_id, "Agency Customer*" %>
+    <%= form.select :customer_id, options_from_collection_for_select(@customers, :id, :name, @customer_id), {prompt: "Please select A Customer"}, {class: 'form-select' }  %>
+  </div>
+
+  <div class="form-group">
     <%= form.label :ref_number %>
     <%= form.text_field :ref_number, class: "form-control" %>
   </div>
