--- a/app/views/shared/_left_nav.html.erb
+++ b/app/views/shared/_left_nav.html.erb
@@ -1,3 +1,4 @@
 <%# Place any links for the LEFT side of the nav bar here. Be sure to add class: "nav-link" to each item for proper spacing. %>
 <%= nav_link_to "Sites", sites_path, class: "nav-link" %>
 <%= nav_link_to "Customers", customers_path, class: "nav-link" %>
+<%= nav_link_to "Specialties", specialties_path, class: "nav-link" %>
